# discrypt

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: android.yml  ci.yml  package-desktop.yml
.omc/plans/: discrypt-plan.md
.omc/specs/: deep-interview-discrypt.md
.omx/plans/: P1-T01-storage-schema-quarantine-2026-06-16.md  P1-T02-password-vault-reinstall-durability-2026-06-16.md  P1-T03-keyring-wrapping-preflight-2026-06-16.md  P1-T04-dev-prod-storage-separation-2026-06-16.md  P1-T06-recovery-roadmap-stubs-2026-06-16.md  P10-T01-adapter-registry-factory-2026-06-25.md  P10-T02-mqtt-production-profile-2026-06-25.md  P10-T03-nostr-production-profile-2026-06-25.md  P10-T04-ipfs-libp2p-pubsub-decision-2026-06-25.md  P10-T05-discrypt-quic-rendezvous-client-2026-06-25.md  P10-T06-app-config-signing-versioning-2026-06-25.md  P10-T07-provider-visible-privacy-captures-2026-06-25.md  P10-T08-abuse-rate-limit-backoff-2026-06-25.md  P11-T01-redacted-structured-logs-2026-06-25.md  P11-T03-ice-dtls-provider-report-2026-06-25.md  P11-T04-storage-diagnostic-report-2026-06-25.md  P11-T05-mls-admission-diagnostic-report-2026-06-25.md  P11-T06-crash-panic-hygiene-2026-06-26.md  P12-T01-playwright-ux-matrix-2026-06-26.md  P12-T02-tauri-webdriver-integrated-two-profile-2026-06-26.md  P12-T03-tauri-two-profile-launcher-boundary-2026-06-26.md  P12-T04-split-machine-app-flow-hardening-2026-06-26.md  P12-T05-public-mqtt-split-machine-matrix-2026-06-26.md  P12-T06-public-nostr-split-machine-matrix-2026-06-26.md  P2-T01-invite-schema-v1-2026-06-16.md  P2-T03-remove-invalid-fallback-endpoint-leakage-2026-06-17.md  P2-T04-pending-join-non-member-state-2026-06-17.md  P2-T05-pre-admission-request-route-2026-06-17.md  P2-T06-approval-welcome-persistence-2026-06-19.md  P2-T07-automatic-admission-mode-2026-06-19.md  P2-T08-invite-failure-handling-2026-06-19.md  P2-T09-invite-password-pake-decision-2026-06-19.md  P3-T01-runtime-role-selection-contract-2026-06-17.md  P3-T02-webrtc-diagnostic-timeline-2026-06-17.md  P3-T03-candidate-queueing-late-arrival-2026-06-17.md  P3-T04-glare-reconnect-idempotent-attach-2026-06-17.md  P3-T05-remove-provider-app-payload-relay-2026-06-17.md  P3-T06-public-mqtt-two-machine-text-e2e-2026-06-18.md  P3-T07-public-nostr-two-machine-text-e2e-2026-06-18.md  P3-T08-turn-needed-fail-closed-path-2026-06-19.md  (+44 more)
.omx/ultragoal/: brief.md  codex-goal-snapshot-G012-per-63-message-fanout-dedup.json  codex-goal-snapshot-G028-per-81-p9-t07-backup-recovery.json  codex-goal-snapshot-G029-per-82-p10-t01-adapter-registry-factory.json  goals.json  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/examples/: g009_split_machine_app_flow.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/abuse/: Cargo.toml
crates/abuse/src/: lib.rs
crates/admission/: Cargo.toml
crates/admission/src/: lib.rs
crates/admission/tests/: invite_metadata.rs
crates/content-keys/: Cargo.toml
crates/content-keys/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  production_status.rs  services.rs
crates/media/: Cargo.toml
crates/media/src/: capture.rs  lib.rs  sframe.rs  transform_bridge.rs  transport.rs
crates/mls-core/: Cargo.toml
crates/mls-core/src/: device_set.rs  exporter.rs  governance.rs  group.rs  identity.rs  lib.rs  openmls_engine.rs  provider.rs
crates/mls-delivery/: Cargo.toml
crates/mls-delivery/src/: lib.rs
crates/relay-overlay/: Cargo.toml
crates/relay-overlay/src/: capability.rs  failover.rs  gossip.rs  integrity.rs  lib.rs  manager.rs  ranking.rs  redelivery.rs  store_forward.rs  topology.rs
crates/storage/: Cargo.toml
crates/storage/src/: app_db.rs  appdb.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/examples/: split_machine_p2p.rs
crates/transport/src/: history_sync.rs  ice.rs  lib.rs  peer_overlay.rs  policy.rs  provider_adapters.rs  route_graph.rs  session.rs  signaling.rs  webrtc_negotiation.rs
crates/transport/tests/: connectivity_flows.rs  g008_stun_turn_fallback.rs  public_signaling_e2e.rs  public_webrtc_datachannel_e2e.rs
docs/: g039-invite-metadata-review.md  phase-1-media-security-review.md  phase-2-relay-overlay-review.md  phase-2-relay-overlay.md  phase-3-text-history-delivery.md  phase-4-retention-shred-recovery.md  phase-5-governance-admission-recovery-abuse.md  phase-6-connectivity-signaling-push-metadata.md  phase-7-ux-e2e-hardening.md  phase-8-relay-protocol-spec.md  phase-b-storage-persistence-verification.md  ui-honesty-gates.md
harness/multinode/: Cargo.toml
harness/multinode/src/: external_signaling.rs  lib.rs  main.rs
harness/multinode/tests/: overlay_churn_process.rs
scripts/: check-abuse-g116.mjs  check-abuse-g117.mjs  check-abuse-g118.mjs  check-abuse-g119.mjs  check-abuse-g120.mjs  check-ac-dashboard-g101.mjs  check-adr-001-webrtc-media-path.mjs  check-adr-002-openmls-provider-storage.mjs  check-adr-005-pake-admission-helper.mjs  check-adr-006-storage-keychain.mjs  check-adr-007-pcap-forbidden-byte-tooling.mjs  check-adr-008-supply-chain.mjs  check-android-gate.mjs  check-cargo-audit-g122.mjs  check-cargo-deny-g121.mjs  check-configured-turn-proof-p3-t09.mjs  check-crypto-sensitive-deps-g125.mjs  check-desktop-package-ci.mjs  check-dev-prod-storage-separation-p1-t04.mjs  check-final-e2e-g131.mjs  check-g008-stun-turn-fallback.mjs  check-g010-adapter-public-matrix.mjs  check-g010-release-harness.mjs  check-g011-boundary-gate.mjs  check-g012-native-voice-proof.mjs  check-g012-tauri-two-profile-e2e.mjs  check-linux-package-smoke.mjs  check-linux-runtime-docs.mjs  check-malicious-member-g098.mjs  check-malicious-relay-g097.mjs  check-no-placeholders-g127.mjs  check-npm-audit-g123.mjs  check-p12-t02-tauri-webdriver-integrated.mjs  check-p12-t05-public-mqtt-split-machine-matrix.mjs  check-p12-t06-public-nostr-split-machine-matrix.mjs  check-pcap-suite-g096.mjs  check-per59-release-smoke-proof.mjs  check-performance-soak-g100.mjs  check-placeholder-allowlist-g128.mjs  check-presence-g110.mjs  (+35 more)
test-results/: .last-run.json
(+155 files in other folders)
