[workspace]
resolver = "2"
members = [
  "crates/mls-core",
  "crates/mls-delivery",
  "crates/content-keys",
  "crates/storage",
  "crates/admission",
  "crates/transport",
  "external/signaling-repository",
  "crates/relay-overlay",
  "crates/media",
  "crates/abuse",
  "crates/push",
  "crates/core",
  "harness/multinode",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://example.invalid/discrypt"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
