[workspace]
resolver = "2"
members = [
  "crates/mls-core",
  "crates/mls-delivery",
  "crates/content-keys",
  "crates/storage",
  "crates/admission",
  "crates/transport",
  "crates/relay-overlay",
  "crates/media",
  "crates/abuse",
  "crates/push",
  "crates/core",
  "harness/multinode",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://example.invalid/discrypt"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
libopus-rs = "0.0.1"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto"] }
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_sqlite_storage = "0.2.0"
openmls_traits = "0.5.0"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
