[package]
name = "discrypt-admission"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []

[dependencies]
discrypt-transport = { path = "../transport", version = "0.1.0" }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
