[package]
name = "discrypt-mls-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
openmls = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_rust_crypto = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
openmls = { version = "0.8.1", features = ["openmls_rust_crypto", "sqlite-provider"] }
openmls_traits = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
openmls_sqlite_storage = "0.2.0"
