[package]
name = "discrypt-mls-delivery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = ["mls_core/harness"]
local-dev = ["mls_core/local-dev"]
production-network = ["mls_core/production-network"]
production-media = ["mls_core/production-media"]
production-storage = ["mls_core/production-storage"]

[dependencies]
aes-gcm = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
mls_core = { package = "discrypt-mls-core", path = "../mls-core", version = "0.1.0" }
