[package]
name = "discrypt-relay-overlay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []

[dependencies]
discrypt-abuse = { path = "../abuse", version = "0.1.0" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
