[package]
name = "discrypt-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
content_keys = { package = "discrypt-content-keys", path = "../content-keys", version = "0.1.0" }
mls_core = { package = "discrypt-mls-core", path = "../mls-core", version = "0.1.0" }
