[package]
name = "discrypt-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []

[dependencies]
rand = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
webrtc = { version = "0.20.0-alpha.1" }

[dev-dependencies]
