[package]
name = "discrypt-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []

[dependencies]
rand = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
webrtc = { version = "0.20.0-alpha.1" }
hmac = "0.12"
sha1 = "0.10"
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"

[dev-dependencies]
