[package]
name = "discrypt-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = []
local-dev = []
production-network = []
production-media = []
production-storage = []
mqtt-adapter = ["production-network", "dep:rumqttc", "dep:hex"]
nostr-adapter = ["production-network", "dep:nostr-sdk", "dep:hex"]
ipfs-pubsub-adapter = ["production-network", "dep:libp2p", "dep:hex"]
discrypt-quic-rendezvous-adapter = ["production-network"]

[dependencies]
rand = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
webrtc = { version = "0.20.0-alpha.1" }
hmac = "0.12"
sha1 = "0.10"
sha2 = { workspace = true }
base64 = "0.22"
hex = { workspace = true, optional = true }
rumqttc = { package = "rumqttc-next", version = "0.33.2", features = ["url", "websocket"], optional = true }
nostr-sdk = { version = "0.44.1", optional = true }
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "kad", "identify", "macros"], optional = true }
futures = "0.3"

[dev-dependencies]
