[package]
name = "discrypt-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
harness = ["discrypt-core/harness", "discrypt-media/harness", "discrypt-storage/harness", "discrypt-transport/harness"]
local-dev = ["discrypt-core/local-dev", "discrypt-media/local-dev", "discrypt-storage/local-dev", "discrypt-transport/local-dev"]
production-network = ["discrypt-core/production-network", "discrypt-media/production-network", "discrypt-storage/production-network", "discrypt-transport/production-network"]
production-media = ["discrypt-core/production-media", "discrypt-media/production-media", "discrypt-storage/production-media"]
production-storage = ["discrypt-core/production-storage", "discrypt-media/production-storage", "discrypt-storage/production-storage"]
tauri-runtime = ["dep:tauri", "dep:tauri-build", "dep:webkit2gtk", "tauri/wry"]
mqtt-adapter = ["production-network", "discrypt-transport/mqtt-adapter"]
nostr-adapter = ["production-network", "discrypt-transport/nostr-adapter"]
ipfs-pubsub-adapter = ["production-network", "discrypt-transport/ipfs-pubsub-adapter"]
discrypt-quic-rendezvous-adapter = ["production-network", "discrypt-transport/discrypt-quic-rendezvous-adapter"]

[dependencies]
discrypt-core = { path = "../../../crates/core", version = "0.1.0" }
discrypt-admission = { path = "../../../crates/admission", version = "0.1.0" }
discrypt-abuse = { path = "../../../crates/abuse", version = "0.1.0" }
discrypt-mls-core = { path = "../../../crates/mls-core", version = "0.1.0" }
discrypt-mls-delivery = { path = "../../../crates/mls-delivery", version = "0.1.0" }
discrypt-media = { path = "../../../crates/media", version = "0.1.0" }
discrypt-storage = { path = "../../../crates/storage", version = "0.1.0" }
discrypt-transport = { path = "../../../crates/transport", version = "0.1.0" }
base64 = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2.11.2", optional = true, default-features = false , features = [] }

[build-dependencies]
tauri-build = { version = "2.5.3", optional = true , features = [] }

[dev-dependencies]
async-trait = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = { version = "2.0.2", optional = true, features = ["v2_40"] }
